--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
     <meta name="msapplication-TileImage" content="%PUBLIC_URL%/mstile-150x150.png" />
     <meta name="theme-color" content="#ffffff" />
 
-    <title>Ohne: a gluten free map</title>
+    <title>OHNE: a gluten free map</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
