Add sharable meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,17 @@
     <meta name="theme-color" content="#ffffff" />
 
     <title>OHNE: a gluten free map</title>
+
+    <meta name="twitter:card" content="summary" />
+    <meta property="twitter:title" content="OHNE" />
+    <meta property="twitter:description" content="A gluten free map" />
+    <meta property="twitter:image:src" content="%PUBLIC_URL%/Shareable_TW.png" />
+    <meta property="og:url" content="https://www.ohnemap.com" />
+    <meta property="og:title" content="OHNE" />
+    <meta property="og:description" content="A gluten free map" />
+    <meta property="og:site_name" content="OHNE: a gluten free map" />
+    <meta property="og:image" content="%PUBLIC_URL%/Shareable_FB.png" />
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
