--- a/public/index.html
+++ b/public/index.html
@@ -36,12 +36,14 @@
     <meta name="twitter:card" content="summary" />
     <meta property="twitter:title" content="OHNE" />
     <meta property="twitter:description" content="A gluten free map" />
-    <meta property="twitter:image:src" content="%PUBLIC_URL%/Shareable_TW.png" />
+    <meta property="twitter:image:src" content="https://www.ohnemap.com/Shareable_TW.png" />
     <meta property="og:url" content="https://www.ohnemap.com" />
     <meta property="og:title" content="OHNE" />
     <meta property="og:description" content="A gluten free map" />
     <meta property="og:site_name" content="OHNE: a gluten free map" />
-    <meta property="og:image" content="%PUBLIC_URL%/Shareable_FB.png" />
+    <meta property="og:image" content="https://www.ohnemap.com/Shareable_FB.png" />
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="en" />
 
   </head>
   <body>
